# musician-ai

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
app/: client-layout.tsx  globals.css  layout.tsx  page.tsx
app/(public)/aboutus/: page.tsx
app/(public)/home/: page.tsx
app/(public)/instruments/: page.tsx
app/(public)/login/: page.tsx
app/(public)/musicsheets/: page.tsx
app/(public)/practice/: page.tsx
app/(public)/pricing/: page.tsx
app/(public)/profile/: page.tsx
app/(public)/selectinstrument/: page.tsx
app/(public)/tuning/: page.tsx
app/ia/: MIGRATION_GUIDE.md  README.md  env.example  pyproject.toml  requirements.txt  run_tests.py  start_server.py
app/ia/backend/: __init__.py  main.py
app/ia/backend/api/: auth_api.py  instruments_api.py  ml_api.py  practice_api.py  profile_api.py  subscription_api.py
app/ia/backend/database/: connection.py  migrations.py  models.py
app/ia/backend/docs/: API_REFERENCE.md
app/ia/backend/models/: instrument.py  practice.py  subscription.py  user.py
app/ia/backend/scripts/: init_data.py  setup.py
app/ia/backend/services/: auth_service.py  instruments_service.py  ml_service.py  practice_service.py  profile_service.py  subscription_service.py
app/ia/backend/tests/: test_auth_service.py  test_integration.py  test_ml_service.py
components/: conditional-layout.tsx  user-avatar.tsx
components/botao/: botao-login.tsx  botao.tsx
components/intruments/: accordionFinal.tsx
components/music-sheets/: music-accordion.tsx
components/navbar/: index.tsx  navbar.tsx
components/pricing-componentes/: card.tsx
components/redesSociais/: socialLinks.tsx
components/select-instruments/: selectInstruments.tsx
components/sidebar/: app-sidebar.tsx
components/tab/: tab-price.tsx
components/tema/: mode-toggle.tsx
components/text-rotate/: text-rotate-componente.tsx
components/ui/: sidebar.tsx
hooks/: use-sidebar.ts
providers/: auth-provider.tsx  provider-wrapper.tsx
